Add Vercel CORS origin and disable Open-In-View
Allow the frontend hosted at https://nama-project-kamu.vercel.app in CORS by switching to setAllowedOrigins and including both localhost and Vercel origins. Remove unused List import. Also disable Hibernate Open Session In View (spring.jpa.open-in-view=false) to avoid lazy-loading outside transactions and promote proper transactional data access.